Fix mem plot again in monexp nb 7.8.

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.7')\n",
+    "print('Notebook version is 7.8')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -866,10 +866,10 @@
     "if have_procsum:\n",
     "    xdat2 = psm_tfix\n",
     "    ydat2 = 1.e-12*psm.procsum_memory_virtual*maxmem\n",
-    "    lab2 = f\"Task vmem sum [{len(ydat)}] {ydat.median():.1f} GB\"\n",
+    "    lab2 = f\"Task vmem sum [{len(ydat2)}] {ydat2.median():.1f} GB\"\n",
     "    plt.step(xdat2, ydat2, color='blue', label=lab2)\n",
     "    ydat3 = 1.e-9*psm.procsum_memory_resident\n",
-    "    lab3 = f\"Task RSS sum [{len(ydat)}] {ydat.median():.1f} GB\"\n",
+    "    lab3 = f\"Task RSS sum [{len(ydat3)}] {ydat3.median():.1f} GB\"\n",
     "    plt.step(xdat2, ydat3, color='teal', label=lab3)\n",
     "    \n",
     "xdat = sym.tfix\n",
