Add max mem in monexp nb 7.11. 0.26.19

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.10')\n",
+    "print('Notebook version is 7.11')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -935,7 +935,7 @@
     "    \n",
     "xdat = sym.tfix\n",
     "ydat = sym.mem_total - sym.mem_available\n",
-    "plt.step(xdat, ydat, color='orange', label=f\"System [{len(ydat)}] {ydat.median():.1f} GB\")\n",
+    "plt.step(xdat, ydat, color='orange', label=f\"System [{len(ydat)}] max: {ydat.max():.1f} GB\")\n",
     "\n",
     "plt.xlabel(f\"Time [{stunit}]\")\n",
     "plt.ylabel('Memory [GB]')\n",
