Update monexp.ipynb to 7.13. 0.26.20 #11

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.11')\n",
+    "print('Notebook version is 7.13')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -89,7 +89,7 @@
     "    tlatrunmax = 100            # Max for lataency + run time\n",
     "    iosummax = 1000             # Max for the integrated I/O plot [GB]\n",
     "    task_id_plot = None         # Task index or type for latency plots (e.g. 0 or 'isr')\n",
-    "    t0_source = \"system\"        # 'system' for sysmon, 'run' for run start of first task\n",
+    "    t0_source = \"config\"        # 'congig' for config.json, 'system' for sysmon, 'run' for run start of first task\n",
     "    \n",
     "# Set defaults for any missing parameters.\n",
     "if 'monexp' not in dir():\n",
@@ -364,11 +364,17 @@
     "print(f\"Task returned/run/launched/try count: {ntret}/{ntrun}/{ntlau}/{nttry}\")\n",
     "# t0sec is our zero of time in the parsl monitor time zone\n",
     "if monexp.t0_source == 'system':\n",
+    "    # System monitor started.\n",
     "    t0sec_sym = sym.time[0]\n",
     "    t0sec_dbr = t0sec_sym - monexp.tzoff\n",
-    "elif monexp.t0_source == 'run':  \n",
+    "elif monexp.t0_source == 'run':\n",
+    "    # First job started running.\n",
     "    t0sec_dbr = tst.task_try_time_running.min() + dbr.t0\n",
     "    t0sec_sym = t0sec_dbr + monexp.tzoff\n",
+    "elif monexp.t0_source == 'config':\n",
+    "    # Shortly after apprun_g3wfpipe started running.\n",
+    "    t0sec_sym = os.path.getmtime('config.json')\n",
+    "    t0sec_dbr = t0sec_sym - monexp.tzoff\n",
     "else:\n",
     "    raise Exception(f\"Invalid t0_source: {monexp.t0_source}\")\n",
     "dtfix = (t0sec_dbr - dbr.t0)/tunit\n",
@@ -640,7 +646,7 @@
     "plt.plot(tsclau.tfix, tsclau['all'], '.', color=cols[0], label=f\"Launched [{tsclau['all'].max():.0f}] {tfix_procs_launched:.1f} {stunit}\")\n",
     "plt.plot(tscrun.tfix, tscrun['all'], '.', color=cols[1], label=f\"Running [{tscrun['all'].max():.0f}] {tfix_procs_running:.1f} {stunit}\")\n",
     "plt.plot(tscret.tfix, tscret['all'], '.', color=cols[2], label=f\"Returned [{tscret['all'].max():.0f}] {tfix_procs_done:.1f} {stunit}\")\n",
-    "plt.xlabel(f\"Time [{stunit}]\")\n",
+    "plt.xlabel(f\"Time [{stunit}] (T0 from {monexp.t0_source})\")\n",
     "plt.ylabel('Integrated task count')\n",
     "plt.legend(loc=legloc)\n",
     "plt.grid(True)\n",
@@ -882,14 +888,15 @@
     "    csmiow = csmsys + smiow\n",
     "    csmidl = csmiow + smidl\n",
     "    plt.figure(figsize=(pdx, pdy))\n",
-    "    plt.step(x=cpt, y=cpusr+cpsys+cpiow+cpidl, color='gray', label=f\"Idle [{len(cpidl)}] $\\eta$={cpidl.median():.1f} $\\Sigma$={csmidl:.2f} {scptfac}\") \n",
-    "    plt.step(x=cpt, y=cpusr+cpsys+cpiow, color='red', label=f\"IOwait [{len(cpiow)}] $\\eta$={cpiow.median():.1f} $\\Sigma$={csmiow:.2f} {scptfac}\")\n",
-    "    plt.step(x=cpt, y=cpusr+cpsys, color='green', label=f\"System [{len(cpsys)}] $\\eta$={cpsys.median():.1f} $\\Sigma$={csmsys:.2f} {scptfac}\")\n",
+    "    plt.step(x=cpt, y=cpusr+cpsys+cpiow+cpidl, color='black', label=f\"+ Idle $\\eta$={cpidl.median():.1f} $\\Sigma$={csmidl:.2f} {scptfac}\") \n",
+    "    plt.step(x=cpt, y=cpusr+cpsys+cpiow, color='red', label=f\"+ IOwait $\\eta$={cpiow.median():.1f} $\\Sigma$={csmiow:.2f} {scptfac}\")\n",
+    "    plt.step(x=cpt, y=cpusr+cpsys, color='green', label=f\"+ System $\\eta$={cpsys.median():.1f} $\\Sigma$={csmsys:.2f} {scptfac}\")\n",
     "    plt.step(x=cpt, y=cpusr, color='blue', label=f\"User [{len(cpusr)}] $\\eta$={cpusr.median():.1f} $\\Sigma$={csmusr:.2f} {scptfac}\")\n",
+    "    plt.plot(tscrun.tfix, tscact, ',', color='gray', label=f\"Number of running tasks $\\eta$={tscact.median():.1f}\")\n",
     "    plt.xlabel(f\"Time [{stunit}]\")\n",
     "    plt.ylabel('CPU state count')\n",
     "    plt.grid(True)\n",
-    "    plt.legend()\n",
+    "    plt.legend(loc='right')\n",
     "    junk = plt.axis([xmin, xmax, ymin, ymax])\n",
     "    plt.title(pttl)\n",
     "    plt.savefig(pfx+'cpu-state-count'+sfx)"
