Update to monexp nb 7.14.

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.13')\n",
+    "print('Notebook version is 7.14')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -80,8 +80,9 @@
     "    sbunit = 'gb'               # Unit for memory, I/O\n",
     "    tmin = 0                    # Min time for time axes\n",
     "    tmax = 20                   # Max time for time axes\n",
-    "    taskrunmax = 130            # Max for running task axes\n",
-    "    taskrunmax_pernode = False  # If true taskrunmax is scaled by nnod\n",
+    "    taskrunmax = 1.02           # Max for running task axes\n",
+    "    taskrunmax_percpu = True    # If true, taskrunmax is scaled bu ncpu\n",
+    "    taskrunmax_pernode = True   # If true taskrunmax is scaled by nnod\n",
     "    tasktimemax = 200           # Max for time/task axis [s]\n",
     "    taskcount_interval = 10     # Sampling interval for evaluating try task counts\n",
     "    tzoff = 0                   # Time zone offset between system and process monitors\n",
@@ -326,6 +327,8 @@
     "else:\n",
     "    print(f\"The run used {nnod} nodes: {nodes}\")\n",
     "taskrunmax = monexp.taskrunmax\n",
+    "if monexp.taskrunmax_percpu:\n",
+    "    taskrunmax = taskrunmax * ncpu\n",
     "if monexp.taskrunmax_pernode:\n",
     "    taskrunmax = taskrunmax * nnod"
    ]
@@ -518,7 +521,7 @@
     "    labs[itid] = f\"{dbr.task_names[itid][0:20]} [{len(tstDoneByTask[itid])}/{dbr.task_name_counts[itid]}]{savg} sec\"\n",
     "plt.figure(figsize=(pdx, pdy))\n",
     "plt.hist(bins=100, range=(x1, x2), x=taskdts, stacked=True, label=labs)\n",
-    "plt.legend(loc=\"upper right\", fontsize=12)\n",
+    "plt.legend(loc=\"upper right\", fontsize=16)\n",
     "if newlatency:\n",
     "    plt.xlabel('Process run time [sec]')\n",
     "else:\n",
@@ -578,7 +581,7 @@
     "            plt.plot(tsc.tfix, tsc[itid], '.', color=cols[itid%ncol], label=labs[itid])\n",
     "        plt.xlabel(f\"Time [{stunit}]\")\n",
     "        plt.ylabel(f\"Integrated {sstat} task count\")\n",
-    "        plt.legend(loc=legloc, fontsize=10)\n",
+    "        plt.legend(loc=legloc, fontsize=16)\n",
     "        plt.grid(True)\n",
     "        junk = plt.axis([tmin, tmax, 0, 1.02*ntskByTidMax])\n",
     "        plt.title(pttl)\n",
@@ -648,7 +651,7 @@
     "plt.plot(tscret.tfix, tscret['all'], '.', color=cols[2], label=f\"Returned [{tscret['all'].max():.0f}] {tfix_procs_done:.1f} {stunit}\")\n",
     "plt.xlabel(f\"Time [{stunit}] (T0 from {monexp.t0_source})\")\n",
     "plt.ylabel('Integrated task count')\n",
-    "plt.legend(loc=legloc)\n",
+    "plt.legend(loc=legloc, fontsize=16)\n",
     "plt.grid(True)\n",
     "ymin = 0\n",
     "ymax = 1.02*ntsk\n",
@@ -699,14 +702,21 @@
     "    plt.step(x=tscret.tfix, y=ytmp, color=cols[itid%ncol], label=labs[itid])\n",
     "plt.xlabel(f\"Time [{stunit}]\")\n",
     "plt.ylabel('Running task count')\n",
-    "plt.legend(fontsize=10)\n",
+    "plt.legend(fontsize=16)\n",
     "plt.title(pttl)\n",
-    "#plt.setp(plt.gca().get_legend().get_texts(), fontsize='8')\n",
     "plt.grid(True)\n",
     "junk = plt.axis([xmin, xmax, ymin, ymax])\n",
     "plt.title(pttl)\n",
     "plt.savefig(pfx+'nruntask'+sfx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6a292d5-2105-4028-9901-78686b9a64e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -773,7 +783,7 @@
     "xmin = tmin\n",
     "xmax = tmax\n",
     "ymin = 0\n",
-    "ymax = 105\n",
+    "ymax = 102\n",
     "plt.figure(figsize=(pdx, pdy))\n",
     "if havesym:\n",
     "    cpp = sym.cpu_percent\n",
@@ -871,7 +881,7 @@
     "    xmax = tmax\n",
     "    ymin = 0\n",
     "    fac = ncpu\n",
-    "    ymax = 1.02*fac\n",
+    "    ymax = taskrunmax\n",
     "    cpt = sym.tfix \n",
     "    cpusr = fac*sym.cpu_user/sym.cpu_time\n",
     "    cpsys = fac*sym.cpu_system/sym.cpu_time\n",
