Upgrade to monexp nb 7.15. 0.26.24

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.14')\n",
+    "print('Notebook version is 7.15')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -189,6 +189,51 @@
     "  print(f\"Total memory is {maxmem:.1f} {sbunit}\")\n",
     "except:\n",
     "  print(f\"WARNING: System monitoring data not found.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45ba343-2473-4d4c-834b-2b735020201c",
+   "metadata": {},
+   "source": [
+    "## Fetch task output data\n",
+    "If the file task-output-size.log is present that it is assume to be table containing (time size free) where size is the amount of\n",
+    "task data witten and free is the space remaining on the disk, both in GiB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d6f189-8726-4e4a-a142-39c0e7380557",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "toname = 'task-output-size.log'\n",
+    "if os.path.isfile(toname):\n",
+    "    try:\n",
+    "        df_taskout = pandas.read_csv(toname, sep=' ', skipinitialspace=True, names=['time', 'size', 'free'])\n",
+    "        have_taskout = len(df_taskout)\n",
+    "        print(df_taskout)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unable to parse {toname}: {e}\")\n",
+    "        have_taskout = False\n",
+    "if have_taskout:\n",
+    "    df_taskout['dsize'] = df_taskout['size'].shift(0) - df_taskout['size'].shift(1)\n",
+    "    df_taskout['dtime'] = df_taskout['time'].shift(0) - df_taskout['time'].shift(1)\n",
+    "    df_taskout['rate'] = df_taskout.dsize/df_taskout.dtime\n",
+    "    print(df_taskout)\n",
+    "    taskout_minsize = df_taskout['size'].min()\n",
+    "    taskout_maxsize = df_taskout['size'].max()\n",
+    "    taskout_minfree = df_taskout['free'].min()\n",
+    "    sfto = '12.3f'\n",
+    "    print(f\"Task output has {len(df_taskout)} entries.\")\n",
+    "    print(f\" Starting task size: {df_taskout.iloc[0]['size']:{sfto}} GiB\")\n",
+    "    print(f\"    Final task size: {df_taskout.iloc[-1]['size']:{sfto}} GiB\")\n",
+    "    print(f\"  Minimum task size: {taskout_minsize:{sfto}} GiB\")\n",
+    "    print(f\"  Maximum task size: {taskout_maxsize:{sfto}} GiB\")\n",
+    "    print(f\" Mininum free space: {taskout_minfree:{sfto}} GiB\")"
    ]
   },
   {
@@ -402,6 +447,8 @@
     "    psm_interval_tfix = pandas.concat([pandas.Series([(psm_tfix[0]-deltfix)]), psm_tfix])\n",
     "if havesym:\n",
     "    sym['tfix'] = (sym.time - t0sec_sym)/tunit\n",
+    "if have_taskout:\n",
+    "    df_taskout['tfix'] = (df_taskout.time - t0sec_sym)/tunit\n",
     "\n",
     "twkf1 = wkf.tfix_began.min()\n",
     "twkf2 = wkf.tfix_completed.max()\n",
@@ -417,6 +464,9 @@
     "if havesym:\n",
     "    tsym1 = sym.tfix.min()\n",
     "    tsym2 = sym.tfix.max()\n",
+    "if have_taskout:\n",
+    "    ttko1 = df_taskout.tfix.min()\n",
+    "    ttko2 = df_taskout.tfix.max()\n",
     "if tmax <= tmin:\n",
     "    tmax = 1.01*tprc2\n",
     "\n",
@@ -433,6 +483,8 @@
     "    print(f\"  Procsum time range: ({tpsm1:.2f}, {tpsm2:.2f}) {stunit}\")\n",
     "if havesym:\n",
     "    print(f\"   System time range: ({tsym1:.2f}, {tsym2:.2f}) {stunit}\")\n",
+    "if have_taskout:\n",
+    "    print(f\"  Task output time range: ({ttko1:.2f}, {ttko2:.2f} {stunit}\")\n",
     "print(f\" Plotting time range: ({ tmin:.2f}, { tmax:.2f}) {stunit}\")"
    ]
   },
@@ -978,12 +1030,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if have_procsum:\n",
+    "have_ioplot = have_procsum or have_taskout\n",
+    "if have_ioplot:\n",
     "    plt.figure(figsize=(pdx, pdy))\n",
+    "if have_procsum:\n",
     "    rea = psm.procsum_disk_read/gb/delt\n",
     "    wri = psm.procsum_disk_write/gb/delt\n",
     "    plt.plot(psm.tfix, rea, 'b+', label=f\"Input [{len(rea)}] {rea.median():.2f} GB/s\")\n",
     "    plt.plot(psm.tfix, wri, 'rx', label=f\"Output [{len(wri)}] {wri.median():0.2f} GB/s\")\n",
+    "if have_taskout:\n",
+    "    x = df_taskout.tfix\n",
+    "    y = df_taskout.rate\n",
+    "    plt.plot(x, y, '1r', label=f\"Task output [{len(y)}] {y.median():.2f} GB/s\")\n",
+    "if have_ioplot:\n",
     "    plt.xlabel(f\"Time [{stunit}]\")\n",
     "    plt.ylabel('Disk I/O [GB/s]')\n",
     "    plt.grid(True)\n",
@@ -1001,18 +1060,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if have_procsum:\n",
+    "if have_ioplot:\n",
     "    xmin = tmin\n",
     "    xmax = tmax\n",
     "    ymin = 0.0\n",
     "    ymax = monexp.iosummax\n",
     "    plt.figure(figsize=(pdx, pdy))\n",
+    "if have_procsum:\n",
     "    readgb = psm.procsum_disk_read.cumsum()/gb\n",
     "    writgb = psm.procsum_disk_write.cumsum()/gb\n",
     "    print(f\" Read sum: {readgb.max():8.1f} GB\")\n",
     "    print(f\"Write sum: {writgb.max():8.1f} GB\")\n",
     "    plt.plot(psm.tfix, readgb, 'b+', label='Input')\n",
     "    plt.plot(psm.tfix, psm.procsum_disk_write.cumsum()/gb, 'rx', label='Output')\n",
+    "if have_taskout:\n",
+    "    x = df_taskout.tfix\n",
+    "    y = df_taskout['size']\n",
+    "    plt.plot(x, y, 'r1', label=f\"Task output [{len(y)}] {y.max():.2f} GB\")\n",
+    "if have_ioplot:\n",
     "    plt.xlabel(f\"Time [{stunit}]\")\n",
     "    plt.ylabel('Disk I/O [GB]')\n",
     "    plt.grid(True)\n",
