Add support for plot-title.txt in monexp nb 7.16.

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.15.1')\n",
+    "print('Notebook version is 7.16')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -74,7 +74,7 @@
     "# Defaults for configuration.\n",
     "class monexp_def:\n",
     "    dir = os.getcwd()\n",
-    "    name = os.path.basename(os.getcwd())\n",
+    "    name = os.path.basename(os.getcwd())  # Prefix for the plot files generated here\n",
     "    run_id = None\n",
     "    stunit = 'minute'           # Unit for time axes\n",
     "    sbunit = 'gb'               # Unit for memory, I/O\n",
@@ -125,18 +125,24 @@
     "pdy = 6\n",
     "\n",
     "line = '-----------------------------------------------------------'\n",
-    "fread = monexp.dir + '/README.txt'\n",
+    "\n",
+    "# Plot title is taken from plot-title.txt or constructed from README.txt.\n",
+    "fread = monexp.dir + '/plot-title.txt'\n",
+    "print(fread)\n",
     "if os.path.exists(fread):\n",
     "    fin = open(fread, 'r')\n",
-    "    #readme = fin.read().strip()\n",
-    "    readme = fin.readlines()\n",
-    "    with open(fread) as fin:\n",
-    "        readme = [line.rstrip() for line in fin]\n",
+    "    pttl = fin.read().strip()\n",
     "else:\n",
-    "    raise Exception('README.txt not found')\n",
-    "print('README:')\n",
-    "for line in readme: print(line)\n",
-    "pttl = monexp.name + \": \" + readme[0]\n",
+    "    fread = monexp.dir + '/README.txt'\n",
+    "    if os.path.exists(fread):\n",
+    "        fin = open(fread, 'r')\n",
+    "        with open(fread) as fin:\n",
+    "            readme = [line.rstrip() for line in fin]\n",
+    "    else:\n",
+    "        raise Exception('README.txt not found')\n",
+    "    print('README:')\n",
+    "    for line in readme: print(line)\n",
+    "    pttl = monexp.name + \": \" + readme[0]\n",
     "print(f\"Plot title: {pttl}\")\n",
     "pfx = monexp.name\n",
     "print(f\"Plot file prefix: {pfx}\")\n",
