Upgrade to monexp notebook 7.17.

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.16')\n",
+    "print('Notebook version is 7.17')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -960,7 +960,7 @@
     "    plt.step(x=cpt, y=cpusr+cpsys+cpiow, color='red', label=f\"+ IOwait $\\eta$={cpiow.median():.1f} $\\Sigma$={csmiow:.2f} {scptfac}\")\n",
     "    plt.step(x=cpt, y=cpusr+cpsys, color='green', label=f\"+ System $\\eta$={cpsys.median():.1f} $\\Sigma$={csmsys:.2f} {scptfac}\")\n",
     "    plt.step(x=cpt, y=cpusr, color='blue', label=f\"User [{len(cpusr)}] $\\eta$={cpusr.median():.1f} $\\Sigma$={csmusr:.2f} {scptfac}\")\n",
-    "    plt.plot(tscrun.tfix, tscact, ',', color='gray', label=f\"Number of running tasks $\\eta$={tscact.median():.1f}\")\n",
+    "    plt.plot(tscrun.tfix, tscact, '', color='saddlebrown', alpha=0.7, label=f\"Number of running tasks $\\eta$={tscact.median():.1f}\")\n",
     "    plt.xlabel(f\"Time [{stunit}]\")\n",
     "    plt.ylabel('CPU state count')\n",
     "    plt.grid(True)\n",
