Update monexp nb to 7.18 adding fsmon.

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.17')\n",
+    "print('Notebook version is 7.18')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -239,7 +239,7 @@
     "    print(f\"    Final task size: {df_taskout.iloc[-1]['size']:{sfto}} GiB\")\n",
     "    print(f\"  Minimum task size: {taskout_minsize:{sfto}} GiB\")\n",
     "    print(f\"  Maximum task size: {taskout_maxsize:{sfto}} GiB\")\n",
-    "    print(f\" Mininum free space: {taskout_minfree:{sfto}} GiB\")"
+    "    print(f\" Minimum free space: {taskout_minfree:{sfto}} GiB\")"
    ]
   },
   {
@@ -492,6 +492,43 @@
     "if have_taskout:\n",
     "    print(f\"  Task output time range: ({ttko1:.2f}, {ttko2:.2f} {stunit}\")\n",
     "print(f\" Plotting time range: ({ tmin:.2f}, { tmax:.2f}) {stunit}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "453b6e33-b199-4242-ac98-f618eee02051",
+   "metadata": {},
+   "source": [
+    "## File system monitor\n",
+    "\n",
+    "Fetch data from the file system monitor.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20e24ecc-178f-4a2e-a61a-cf62defe81a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fsmfil = 'fsmon.csv'\n",
+    "fsmcols = ['time', 'source', 'rw', 'size', 'dtim', 'rate']\n",
+    "if os.path.exists(fsmfil):\n",
+    "    print('Processing fsm')\n",
+    "    fsm = pandas.read_csv(fsmfil, sep=\"\\s+\", comment='#', header=None, names=fsmcols)\n",
+    "    print(fsm)\n",
+    "else:\n",
+    "    fsm = None\n",
+    "dt0_fsm = fsm.time[0] - t0sec_sym\n",
+    "fsm['tfix'] = (fsm.time + dt0_fsm)/tunit\n",
+    "fsm_scr_r = fsm[fsm.source=='SCR'][fsm.rw=='r']\n",
+    "fsm_scr_w = fsm[fsm.source=='SCR'][fsm.rw=='w']\n",
+    "fsm_cfs_r = fsm[fsm.source=='CFS'][fsm.rw=='r']\n",
+    "print(fsm_scr_r)"
    ]
   },
   {
@@ -1036,18 +1073,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ratemax=2.0\n",
     "have_ioplot = have_procsum or have_taskout\n",
     "if have_ioplot:\n",
     "    plt.figure(figsize=(pdx, pdy))\n",
-    "if have_procsum:\n",
-    "    rea = psm.procsum_disk_read/gb/delt\n",
-    "    wri = psm.procsum_disk_write/gb/delt\n",
-    "    plt.plot(psm.tfix, rea, 'b+', label=f\"Input [{len(rea)}] {rea.median():.2f} GB/s\")\n",
-    "    plt.plot(psm.tfix, wri, 'rx', label=f\"Output [{len(wri)}] {wri.median():0.2f} GB/s\")\n",
     "if have_taskout:\n",
     "    x = df_taskout.tfix\n",
     "    y = df_taskout.rate\n",
     "    plt.plot(x, y, '1r', label=f\"Task output [{len(y)}] {y.median():.2f} GB/s\")\n",
+    "elif have_procsum:\n",
+    "    rea = psm.procsum_disk_read/gb/delt\n",
+    "    wri = psm.procsum_disk_write/gb/delt\n",
+    "    plt.plot(psm.tfix, rea, 'b+', label=f\"Input [{len(rea)}] {rea.median():.2f} GB/s\")\n",
+    "    plt.plot(psm.tfix, wri, 'rx', label=f\"Output [{len(wri)}] {wri.median():0.2f} GB/s\")\n",
+    "if fsm is not None: \n",
+    "    plt.plot(fsm_cfs_r.tfix, fsm_cfs_r.rate/1000.0, 'g-', linewidth=0.6, label=\"Monitor CFS read\")\n",
+    "    plt.plot(fsm_scr_r.tfix, fsm_scr_r.rate/1000.0, 'b-', linewidth=0.6, label=\"Monitor SCR read\")\n",
+    "    plt.plot(fsm_scr_w.tfix, fsm_scr_w.rate/1000.0, 'r-', linewidth=0.6, label=\"Monitor SCR write\")\n",
     "if have_ioplot:\n",
     "    plt.xlabel(f\"Time [{stunit}]\")\n",
     "    plt.ylabel('Disk I/O [GB/s]')\n",
@@ -1056,7 +1098,7 @@
     "    junk = plt.axis([tmin, tmax, 0, 4])\n",
     "    plt.title(pttl)\n",
     "    plt.savefig(pfx+'io'+sfx)\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
@@ -1072,17 +1114,17 @@
     "    ymin = 0.0\n",
     "    ymax = monexp.iosummax\n",
     "    plt.figure(figsize=(pdx, pdy))\n",
-    "if have_procsum:\n",
+    "if have_taskout:\n",
+    "    x = df_taskout.tfix\n",
+    "    y = df_taskout['size']\n",
+    "    plt.plot(x, y, 'r1', label=f\"Task output [{len(y)}] {y.max():.2f} GB\")\n",
+    "elif have_procsum:\n",
     "    readgb = psm.procsum_disk_read.cumsum()/gb\n",
     "    writgb = psm.procsum_disk_write.cumsum()/gb\n",
     "    print(f\" Read sum: {readgb.max():8.1f} GB\")\n",
     "    print(f\"Write sum: {writgb.max():8.1f} GB\")\n",
     "    plt.plot(psm.tfix, readgb, 'b+', label='Input')\n",
     "    plt.plot(psm.tfix, psm.procsum_disk_write.cumsum()/gb, 'rx', label='Output')\n",
-    "if have_taskout:\n",
-    "    x = df_taskout.tfix\n",
-    "    y = df_taskout['size']\n",
-    "    plt.plot(x, y, 'r1', label=f\"Task output [{len(y)}] {y.max():.2f} GB\")\n",
     "if have_ioplot:\n",
     "    plt.xlabel(f\"Time [{stunit}]\")\n",
     "    plt.ylabel('Disk I/O [GB]')\n",
