Update monexp nb to 7.19.

--- a/ipynb/monexp.ipynb
+++ b/ipynb/monexp.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Notebook version is 7.18')\n",
+    "print('Notebook version is 7.19.dev1')\n",
     "import sys\n",
     "import os\n",
     "import datetime\n",
@@ -90,7 +90,8 @@
     "    tlatrunmax = 100            # Max for lataency + run time\n",
     "    iosummax = 1000             # Max for the integrated I/O plot [GB]\n",
     "    task_id_plot = None         # Task index or type for latency plots (e.g. 0 or 'isr')\n",
-    "    t0_source = \"config\"        # 'congig' for config.json, 'system' for sysmon, 'run' for run start of first task\n",
+    "    t0_source = \"config\"        # 'config' for config.json, 'system' for sysmon, 'run' for run start of first task\n",
+    "    remove_task_names = ['prereq_starter']  # task with these names are removed from the task count plots.\n",
     "    \n",
     "# Set defaults for any missing parameters.\n",
     "if 'monexp' not in dir():\n",
@@ -596,24 +597,38 @@
     "        savg = ''\n",
     "    print(f\"{itid:4}: {dbr.task_names[itid]} [{ndone}/{nrun}/{dbr.task_name_counts[itid]}]{savg}\")\n",
     "\n",
-    "\n",
+    "# Select tasks with names not in monexp.remove_task_names\n",
+    "removed_task_names = {}\n",
+    "show_task_names = {}\n",
+    "for itid in range(ntid):\n",
+    "    tnam = dbr.task_names[itid]\n",
+    "    if tnam in monexp.remove_task_names:\n",
+    "        removed_task_names[itid] = tnam\n",
+    "    else:\n",
+    "        show_task_names[itid] = tnam\n",
+    "ntid_show = len(show_task_names)\n",
+    "show_tids = list(show_task_names.keys())\n",
+    "print(f\"Selected {ntid_show} of {ntid} task names\")\n",
+    "    \n",
     "x1 = 0\n",
     "x2 = monexp.tasktimemax\n",
     "# Fetch run times for each type of task\n",
-    "taskdts = [None]*ntid\n",
-    "cols = [None]*max(ntid,3)\n",
+    "taskdts = [None]*ntid_show\n",
+    "cols = [None]*max(ntid_show,3)\n",
     "ncol = len(cols)\n",
-    "labs = [None]*ntid\n",
+    "labs = [None]*ntid_show\n",
     "#mycols = ['red', 'green', 'orange', 'blue', 'yellow', 'violet', 'cyan', 'pink']\n",
-    "for itid in range(ntid):\n",
+    "for iplt in range(ntid_show):\n",
+    "    itid = show_tids[iplt]\n",
+    "    tnam = show_task_names[itid]\n",
     "    td = tstRunTimeByTask[itid]\n",
     "    if len(td):\n",
     "        avg = td.mean()\n",
     "        savg = f\" {avg:.1f}\"\n",
     "    else:\n",
     "        savg = ''\n",
-    "    taskdts[itid] = td.clip(upper=0.999*x2)\n",
-    "    labs[itid] = f\"{dbr.task_names[itid][0:20]} [{len(tstDoneByTask[itid])}/{dbr.task_name_counts[itid]}]{savg} sec\"\n",
+    "    taskdts[iplt] = td.clip(upper=0.999*x2)\n",
+    "    labs[iplt] = f\"{tnam[0:20]} [{len(tstDoneByTask[itid])}/{dbr.task_name_counts[itid]}]{savg} sec\"\n",
     "plt.figure(figsize=(pdx, pdy))\n",
     "plt.hist(bins=100, range=(x1, x2), x=taskdts, stacked=True, label=labs)\n",
     "plt.legend(loc=\"upper right\", fontsize=16)\n",
@@ -637,7 +652,9 @@
     "The *taskcounts* method uses the task state times from the try table to evaluate the integrated number of tasks that have reached each of the task states\n",
     "(launched, running, returned) as a function of time.\n",
     "\n",
-    "If there is more than one task type, we plot this for the running and returned states with a separate curve for each type."
+    "If there is more than one task type, we plot this for the running and returned states with a separate curve for each type.\n",
+    "\n",
+    "Task with types in _remove_task_names_ are excluded from the plots."
    ]
   },
   {
@@ -662,18 +679,21 @@
     "tsclau = dbr.taskcounts('launched')\n",
     "tscrun = dbr.taskcounts('running')\n",
     "tscret = dbr.taskcounts('returned')\n",
+    "remove_prereq_starters = True\n",
+    "have_prereq_starter = 'prereq_starter' in dbr.task_names\n",
     "tscact = tscrun - tscret   # Number of task running\n",
     "# Evaluate the times at which all tasks are launched, started and running.\n",
     "tfix_procs_launched = tsclau.at[tsclau.idxmax()['all'], 'tfix']\n",
     "tfix_procs_running  = tscrun.at[tscrun.idxmax()['all'], 'tfix']\n",
     "tfix_procs_done     = tscret.at[tscret.idxmax()['all'], 'tfix']\n",
     "print(f\"Last task return time: {tfix_procs_done:0.2f} {stunit}\")\n",
-    "if ntid > 1:\n",
+    "if ntid_show > 1:\n",
     "    for sstat in ['running', 'returned']:\n",
     "        plt.figure(figsize=(pdx, pdy))\n",
     "        tsc = dbr.taskcounts(sstat)\n",
-    "        for itid in range(ntid):\n",
-    "            plt.plot(tsc.tfix, tsc[itid], '.', color=cols[itid%ncol], label=labs[itid])\n",
+    "        for iplt in range(ntid_show):\n",
+    "            itid = show_tids[iplt]\n",
+    "            plt.plot(tsc.tfix, tsc[itid], '.', color=cols[itid%ncol], label=labs[iplt])\n",
     "        plt.xlabel(f\"Time [{stunit}]\")\n",
     "        plt.ylabel(f\"Integrated {sstat} task count\")\n",
     "        plt.legend(loc=legloc, fontsize=16)\n",
@@ -791,10 +811,23 @@
     "ymax = taskrunmax\n",
     "plt.figure(figsize=(pdx, pdy))\n",
     "tscact = (tscrun['all'] - tscret['all'])\n",
-    "if ntid > 1: plt.step(x=tscrun.tfix, y=tscact, color='black', label='all')\n",
-    "for itid in range(ntid):\n",
+    "xvals = tscrun.tfix\n",
+    "print(dbr.task_names)\n",
+    "\n",
+    "havenps = 'prereq_starter' in dbr.task_names\n",
+    "inps = -1\n",
+    "if havenps:\n",
+    "    inps = dbr.task_names.index('prereq_starter')\n",
+    "    ytmp = tscact - tscrun[inps] + tscret[inps]\n",
+    "    plt.step(xvals, tscact, color='gray', label='all+prereq')\n",
+    "    plt.step(xvals, ytmp, color='black', label='all')\n",
+    "elif ntid_show > 1:\n",
+    "    plt.step(x=tscrun.tfix, y=tscact, color='black', label='all')\n",
+    "for iplt in range(ntid_show):\n",
+    "    itid = show_tids[iplt]\n",
+    "    if itid == inps: continue\n",
     "    ytmp = tscrun[itid] - tscret[itid]\n",
-    "    plt.step(x=tscret.tfix, y=ytmp, color=cols[itid%ncol], label=labs[itid])\n",
+    "    plt.step(x=tscret.tfix, y=ytmp, color=cols[itid%ncol], label=labs[iplt])\n",
     "plt.xlabel(f\"Time [{stunit}]\")\n",
     "plt.ylabel('Running task count')\n",
     "plt.legend(fontsize=16)\n",
@@ -804,14 +837,6 @@
     "plt.title(pttl)\n",
     "plt.savefig(pfx+'nruntask'+sfx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6a292d5-2105-4028-9901-78686b9a64e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1226,6 +1251,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9dc3cfe7-3985-4ffd-8e13-5cf44aa11356",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65b884df-52ea-4e19-8fc1-2a3b66611de6",
    "metadata": {},
    "outputs": [],
    "source": []
